repair overflow of page blog by another way and the problem was in big size of pagination

--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -1,6 +1,3 @@
-body {
-  overflow-x: hidden;
-}
 .text-blog {
   font-size: 0.8rem;
 }
